--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,6 @@
 name = "notrust-track"
 version = "0.1.0"
 authors = ["Alex Lisle <alex.lisle@gmail.com>"]
-license = "Apache-2.0"
 license-file = "LICENSE"
 
 [dependencies]
@@ -12,7 +11,13 @@ log = "0.4"
 simple_logger = "0.5"
 users = "0.7"
 procfs = "0.3"
+clap = "^2.3"
+syslog = "^4.0"
+sys-info = "*"
 
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+serde_yaml = "^0.8"
+
+tempfile = "^3"
