--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "notrust-track"
 version = "0.1.0"
 authors = ["Alex Lisle <alex.lisle@gmail.com>"]
 license-file = "LICENSE"
-description = "Userland Daemon which tracks all incoming and outgoing connections along with their corresponding user and process details"
+description = "Userland Daemon which tracks all incoming and outgoing connections along with their corresponding user and process details."
 readme = "README.md"
 
 
@@ -22,7 +22,7 @@ serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
 serde_yaml = "^0.8"
-
+reqwest = "^0.9"
 tempfile = "^3"
 
 [package.metadata.deb]
@@ -33,14 +33,15 @@ section = "security"
 priority = "optional"
 license-file = ["LICENSE", "0"]
 extended-description = """\
-NoTrust-Track is a userland daemon which monitors all incoming and outgoing TCP and UDP connections,
-when a connection is started or shutdown it reports what process created the socket along with it's
+NoTrust-Track is a userland daemon which monitors all incoming and outgoing
+TCP and UDP connections, when a connection is started or shutdown it reports what process created the socket along with it's
 arguments along side the user details who the process belongs to.
 
 NoTrack-Track can be configured to report through UDP, TCP or local Syslog currently.
 """
+maintainer-scripts = "install_scripts/deb"
 assets = [
-  [ "target/release/notrust-track", "/usr/sbin/notrust-track", "0555" ],
+  [ "target/release/notrust-track", "/usr/sbin/notrust-track", "0550" ],
   [ "install_scripts/default_config/config.yaml", "/etc/notrust/config.yaml", "0644"],
   [ "install_scripts/systemd/notrust-track.service", "/usr/share/notrust/systemd/notrust-track.service", "0644"],
 ]
