--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ serde_json = "1.0"
 serde_yaml = "^0.8"
 reqwest = "^0.9"
 tempfile = "^3"
+chrono = { version = "0.4", features = ["serde"] }
 
 [package.metadata.deb]
 maintainer = "Alex Lisle <alex.lisle@gmail.com>"
