--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ procfs = "0.3"
 clap = "^2.3"
 syslog = "^4.0"
 sys-info = "*"
-
+uuid = { version = "^0.7", features = ["v4", "serde"] }
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
