travis travis travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,5 @@ matrix:
 
 cache: cargo
 
-addons:
-    apt:
-      - ubuntu-toolchain-r-test
-    packages:
-    - libmnl-dev
+before_install:
+  - sudo apt-get install -y libmnl-dev 
